--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "request": "^2.87.0",
     "request-progress": "^3.0.0",
     "tether": "^1.4.0",
+    "twitch-api-v5": "^2.0.3",
     "winreg": "^1.2.3"
   }
 }
