--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "request-progress": "^3.0.0",
     "tether": "^1.4.0",
     "twitch-api-v5": "^2.0.3",
+    "unix-time": "^1.0.1",
     "winreg": "^1.2.3"
   }
 }
