--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "angular": "^1.6.0",
     "angular-tooltips": "^1.1.8",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.7.2",
     "electron-json-storage": "^2.1.0",
     "electron-simple-updater": "^1.2.3",
     "electron-squirrel-startup": "1.0.0",
